--- a/app/views/issues/_attributes.html.erb
+++ b/app/views/issues/_attributes.html.erb
@@ -2,7 +2,7 @@
 
 <div class="splitcontents-3box">
   <p><%= f.file_field :image, :label => :field_immagine %> </p>
-  <p id="prev" style="height: 155px;"> <%= image_tag @issue.image.url(:m) %></p>
+  <div id="prev" style="height: 155px;"> <%= image_tag @issue.image.url(:l) %></div>
 </div>
 <div class="splitcontents-3box">
 
