start user newsletter

--- a/app/views/issues/_edit.html.erb
+++ b/app/views/issues/_edit.html.erb
@@ -51,7 +51,8 @@
     </div>
 
     <%= f.hidden_field :lock_version %>
-    <%= submit_tag l(:button_submit) %>
+    <%# submit_tag l(:button_submit)  %>
+    <%= submit_tag l(:button_edit) %>
     <%= link_to_remote l(:label_preview),
                        { :url => preview_issue_path(:project_id => @project, :id => @issue),
                          :method => 'post',
