--- a/app/views/users/_dati.html.erb
+++ b/app/views/users/_dati.html.erb
@@ -70,4 +70,4 @@
   <p><%= submit_tag l(:button_save_dati) %></p>
 <% end %>
 
-<%= wikitoolbar_for 'note' %>
+<%# wikitoolbar_for 'note'   class => 'wiki-edit'     %>
