--- a/app/views/previews/issue.html.erb
+++ b/app/views/previews/issue.html.erb
@@ -1,11 +1,13 @@
 <% if @notes %>
   <fieldset class="preview"><legend><%= l(:field_notes) %></legend>
     <%= textilizable @notes, :attachments => @attachements, :object => @issue %>
+    <%# yuizable_fs @notes, :attachments => @attachements, :object => @issue %>
   </fieldset>
 <% end %>
 
 <% if @description %>
   <fieldset class="preview"><legend><%= l(:field_description) %></legend>
     <%= textilizable @description, :attachments => @attachements, :object => @issue %>
+    <%# yuizable_fs @description, :attachments => @attachements, :object => @issue %>
   </fieldset>
 <% end %>
