--- a/app/views/cross_organizations/new.html.erb
+++ b/app/views/cross_organizations/new.html.erb
@@ -1,6 +1,6 @@
 <h2><%= link_to l(:label_cross_organization_plural), cross_organizations_path %> &#187; <%= l(:label_cross_organization_new) %></h2>
 
-<% labelled_form_for @cross_organization do |f| %>
+<% labelled_form_for @cross_organization ,:html =>{:multipart =>true} do |f| %>
 
 <%= render :partial => 'form', :locals => { :f => f } %>
 
