--- a/app/views/issues/_attributes.html.erb
+++ b/app/views/issues/_attributes.html.erb
@@ -1,67 +1,79 @@
 <% fields_for :issue, @issue, :builder => TabularFormBuilder do |f| %>
+    <div id="attributes-box">
+      <div class="splitcontents-3box">
+        <p><%= f.file_field :image, :label => :field_immagine %> </p>
 
-<div class="splitcontents-3box">
-  <p><%= f.file_field :image, :label => :field_immagine %> </p>
-  <div id="prev" style="height: 155px;"> <%= image_tag @issue.image.url(:l) %></div>
-</div>
-<div class="splitcontents-3box">
+        <div id="prev" style="height: 155px;"> <%= image_tag @issue.image.url(:l) %></div>
+      </div>
+      <div class="splitcontents-3box">
 
-  <p><%= f.check_box :se_visible_web %></p>
-  <p><%= f.check_box :se_visible_data %></p>
-  <p><%= f.check_box :se_visible_newsletter %></p>
-  <p><%= f.check_box :se_protetto %></p>
-  <p><% if !@issue.new_record? && @issue.se_prenotazione %>
-        <%= f.check_box :se_prenotazione, :disabled => true %>
-    <% else %>
-        <%= f.check_box :se_prenotazione %>
-    <% end %>
-  </p>
-  <p><%= f.select :priority_id, (@priorities.collect {|p| [p.name, p.id]}), {:required => true}, :disabled => !@issue.leaf? %></p>
-<p><%= f.select :assigned_to_id, principals_options_for_select(@issue.assignable_users, @issue.assigned_to), :include_blank => true %></p>
-<% unless @project.issue_categories.empty? %>
-<p><%= f.select :category_id, (@project.issue_categories.collect {|c| [c.name, c.id]}), :include_blank => true %>
-<%= prompt_to_remote(image_tag('add.png', :style => 'vertical-align: middle;'),
-                     l(:label_issue_category_new),
-                     'issue_category[name]',
-                     {:controller => 'issue_categories', :action => 'create', :project_id => @project},
-                     :title => l(:label_issue_category_new),
-                     :tabindex => 199) if authorize_for('issue_categories', 'new') %></p>
-<% end %>
-<% unless @issue.assignable_versions.empty? %>
-<p><%= f.select :fixed_version_id, version_options_for_select(@issue.assignable_versions, @issue.fixed_version), :include_blank => true %>
-<%= prompt_to_remote(image_tag('add.png', :style => 'vertical-align: middle;'),
-                     l(:label_version_new),
-                     'version[name]',
-                     {:controller => 'versions', :action => 'create', :project_id => @project},
-                     :title => l(:label_version_new),
-                     :tabindex => 200) if authorize_for('versions', 'new') %>
-</p>
-<% end %>
-</div>
-<div class="splitcontents-3box">
-  <% if @issue.new_record? || @allowed_statuses.any? %>
-      <p><%= f.select :status_id, (@allowed_statuses.collect {|p| [p.name, p.id]}), :required => true %></p>
-  <% else %>
-      <p><label><%= l(:field_status) %></label> <%= h(@issue.status.name) %></p>
-  <% end %>
-<% if User.current.allowed_to?(:manage_subtasks, @project) %>
-<p id="parent_issue"><%= f.text_field :parent_issue_id, :size => 10 %></p>
-<div id="parent_issue_candidates" class="autocomplete"></div>
-<%= javascript_tag "observeParentIssueField('#{auto_complete_issues_path(:id => @issue, :project_id => @project) }')" %>
-<% end %>
-<p><%= f.text_field :start_date, :size => 10, :disabled => !@issue.leaf? %><%= calendar_for('issue_start_date') if @issue.leaf? %></p>
-<p><%= f.text_field :due_date, :size => 10, :disabled => !@issue.leaf? %><%= calendar_for('issue_due_date') if @issue.leaf? %></p>
-<p><%= f.text_field :estimated_hours, :size => 3, :disabled => !@issue.leaf? %> <%= l(:field_hours) %></p>
-  <p><label><%= l(:field_ordinamento) %></label> <%= f.text_field :ordinamento, :size => 2 %></p>
+        <p><%= f.check_box :se_visible_web %></p>
 
-<% if @issue.leaf? && Issue.use_field_for_done_ratio? %>
-<p><%= f.select :done_ratio, ((0..10).to_a.collect {|r| ["#{r*10} %", r*10] }) %></p>
-<% end %>
+        <p><%= f.check_box :se_visible_data %></p>
 
-</div>
+        <p><%= f.check_box :se_visible_newsletter %></p>
 
-<div style="clear:both;"> </div>
-<%= render :partial => 'issues/form_custom_fields' %>
+        <p><%= f.check_box :se_protetto %></p>
+
+        <p>
+          <% if !@issue.new_record? && @issue.se_prenotazione %>
+              <%= f.check_box :se_prenotazione, :disabled => true %>
+          <% else %>
+              <%= f.check_box :se_prenotazione %>
+          <% end %>
+        </p>
+
+        <p><%= f.select :priority_id, (@priorities.collect { |p| [p.name, p.id] }), {:required => true}, :disabled => !@issue.leaf? %></p>
+
+        <p><%= f.select :assigned_to_id, principals_options_for_select(@issue.assignable_users, @issue.assigned_to), :include_blank => true %></p>
+        <% unless @project.issue_categories.empty? %>
+            <p><%= f.select :category_id, (@project.issue_categories.collect { |c| [c.name, c.id] }), :include_blank => true %>
+              <%= prompt_to_remote(image_tag('add.png', :style => 'vertical-align: middle;'),
+                                   l(:label_issue_category_new),
+                                   'issue_category[name]',
+                                   {:controller => 'issue_categories', :action => 'create', :project_id => @project},
+                                   :title => l(:label_issue_category_new),
+                                   :tabindex => 199) if authorize_for('issue_categories', 'new') %></p>
+        <% end %>
+        <% unless @issue.assignable_versions.empty? %>
+            <p><%= f.select :fixed_version_id, version_options_for_select(@issue.assignable_versions, @issue.fixed_version), :include_blank => true %>
+              <%= prompt_to_remote(image_tag('add.png', :style => 'vertical-align: middle;'),
+                                   l(:label_version_new),
+                                   'version[name]',
+                                   {:controller => 'versions', :action => 'create', :project_id => @project},
+                                   :title => l(:label_version_new),
+                                   :tabindex => 200) if authorize_for('versions', 'new') %>
+            </p>
+        <% end %>
+      </div>
+      <div class="splitcontents-3box">
+        <% if @issue.new_record? || @allowed_statuses.any? %>
+            <p><%= f.select :status_id, (@allowed_statuses.collect { |p| [p.name, p.id] }), :required => true %></p>
+        <% else %>
+            <p><label><%= l(:field_status) %></label> <%= h(@issue.status.name) %></p>
+        <% end %>
+        <% if User.current.allowed_to?(:manage_subtasks, @project) %>
+            <p id="parent_issue"><%= f.text_field :parent_issue_id, :size => 10 %></p>
+
+            <div id="parent_issue_candidates" class="autocomplete"></div>
+            <%= javascript_tag "observeParentIssueField('#{auto_complete_issues_path(:id => @issue, :project_id => @project) }')" %>
+        <% end %>
+        <p><%= f.text_field :start_date, :size => 10, :disabled => !@issue.leaf? %><%= calendar_for('issue_start_date') if @issue.leaf? %></p>
+
+        <p><%= f.text_field :due_date, :size => 10, :disabled => !@issue.leaf? %><%= calendar_for('issue_due_date') if @issue.leaf? %></p>
+
+        <p><%= f.text_field :estimated_hours, :size => 3, :disabled => !@issue.leaf? %> <%= l(:field_hours) %></p>
+
+        <p><label><%= l(:field_ordinamento) %></label> <%= f.text_field :ordinamento, :size => 2 %></p>
+
+        <% if @issue.leaf? && Issue.use_field_for_done_ratio? %>
+            <p><%= f.select :done_ratio, ((0..10).to_a.collect { |r| ["#{r*10} %", r*10] }) %></p>
+        <% end %>
+
+      </div>
+    </div>
+      <div style="clear:both;"></div>
+      <%= render :partial => 'issues/form_custom_fields' %>
 
 <% end %>
 <script type="text/javascript">
