--- a/app/views/sections/_form.html.erb
+++ b/app/views/sections/_form.html.erb
@@ -2,7 +2,28 @@
 
 <div class="box tabular">
   <p><%= f.text_field :sezione, :label => :field_description, :required => true, :size => 60 %></p>
-  <p><%= f.select :top_section_id, (TopSection.all.collect {|c| [c.name, c.id]}), :include_blank => true, :required => true, :size => 60, :title => l(:label_top_section) %></p>
+
+  <p><%= f.select :top_section_id, (TopSection.all.collect { |c| [c.name, c.id] }), :include_blank => true, :required => true, :size => 60, :title => l(:label_top_section) %></p>
+
   <p><%= f.text_field :ordinamento, :label => :field_ordinamento, :size => 3 %></p>
-  <p><%= f.check_box :protetto, :label => :label_protetto %></p>
+  <!--  <p><%# f.check_box :protetto, :label => :label_protetto %></p> -->
+  <p><%= f.file_field :image, :label => :field_immagine %> </p>
+
+  <p id="prev" style="height: 200px;"> <%= image_tag @section.image.url(:l) %>   </p>
+
+  <p>
+  <ul style="font-size: 0.8em; color: #aeaeae; margin: 5px 0 5px  11%;">
+    <li>
+      il rapporto tra larghezza e altezza dell'immagine sarà 3/2
+    </li>
+    <li>
+      l'immagine verrà ritagliata a 300px per 200px
+    </li>
+    <li>
+      l'immagine verrà non deve superare i 200kb e di formato jpg/png/gif/bmp
+    </li>
+  </ul>
 </div>
+<script type="text/javascript">
+    document.getElementById('section_image').addEventListener('change', handleFileSelect, false);
+</script>
