--- a/app/views/sections/index.html.erb
+++ b/app/views/sections/index.html.erb
@@ -1,34 +1,38 @@
 <div class="contextual">
-<%= link_to l(:label_section_new), new_section_path, :class => 'icon icon-add' %>
+  <%= link_to l(:label_section_new), new_section_path, :class => 'icon icon-add' %>
 </div>
 
 <h2><%= l(:label_section_plural) %></h2>
 
 <% if @sections.any? %>
-<table class="list sections">
-  <thead><tr>
-  <%= sort_header_tag('categoria', :title => l(:label_section), :style => 'width: 40%;text-align:left;')%>
-  <%= sort_header_tag('sezione', :title => l(:label_top_section), :style => 'width: 40%;text-align:left;')%>
-  <%= sort_header_tag('ord.', :title => l(:label_ordinamento), :style => 'color:red; width: 10%;')%>
-  <%= sort_header_tag('protetto', :title => l(:label_protetto), :style => 'width: 10%;')%>
-  <th style='width: 5%;'></th>
-  <th style='width: 5%;'></th>
-  </tr></thead>
-  <tbody>
-<% @sections.each do |section| %>
-  <tr class="<%= cycle 'odd', 'even' %>">
-    <td><%= link_to h(section), section_path(section) %></td>
-    <td><%= link_to h(section.top_section), top_section_path(section.top_section, :id => section.top_section_id) %></td>
-    <td align="right"><%=h section.ordinamento %></td>
-    <td align="center"><%= check_box_tag '', 1, section.protetto, :disabled => 'disabled' %></td>
-    <td class="buttons"><%= link_to('', edit_section_path(section), :class => 'icon icon-edit') if User.current.admin? %></td>
-    <td class="buttons"><%= link_to ('', section, :confirm => l(:text_are_you_sure), :method => :delete, :class => 'icon icon-del') if User.current.admin? %></td>
-  </tr>
-<% end %>
-</table>
+    <table class="list sections">
+      <thead>
+      <tr>
+        <th style='width: 35px;'></th>
+        <%= sort_header_tag('categoria', :title => l(:label_section), :style => 'width: 40%;text-align:left;') %>
+        <%= sort_header_tag('sezione', :title => l(:label_top_section), :style => 'width: 40%;text-align:left;') %>
+        <%= sort_header_tag('ord.', :title => l(:label_ordinamento), :style => 'color:red; width: 10%;') %>
+        <%# sort_header_tag('protetto', :title => l(:label_protetto), :style => 'width: 10%;')%>
+        <th style='width: 5%;'></th>
+        <th style='width: 5%;'></th>
+      </tr>
+      </thead>
+      <tbody>
+      <% @sections.each do |section| %>
+          <tr class="<%= cycle 'odd', 'even' %>">
+            <td><%= image_tag section.image.url(:xs) %></td>
+            <td><%= link_to h(section), section_path(section) %></td>
+            <td><%= link_to h(section.top_section), top_section_path(section.top_section, :id => section.top_section_id) %></td>
+            <td align="right"><%= h section.ordinamento %></td>
+            <!--  <td align="center"><%# check_box_tag '', 1, section.protetto, :disabled => 'disabled' %></td> -->
+            <td class="buttons"><%= link_to('', edit_section_path(section), :class => 'icon icon-edit') if User.current.admin? %></td>
+            <td class="buttons"><%= link_to ('', section, :confirm => l(:text_are_you_sure), :method => :delete, :class => 'icon icon-del') if User.current.admin? %></td>
+          </tr>
+      <% end %>
+      </table>
 
-<p class="pagination"><%= pagination_links_full @section_pages, @section_count %></p>
+    <p class="pagination"><%= pagination_links_full @section_pages, @section_count %></p>
 
 <% else %>
-<p class="nodata"><%= l(:label_no_data) %></p>
+    <p class="nodata"><%= l(:label_no_data) %></p>
 <% end %>
