--- a/app/views/sections/new.html.erb
+++ b/app/views/sections/new.html.erb
@@ -1,6 +1,6 @@
 <h2><%= link_to l(:label_section_plural), sections_path %> &#187; <%= l(:label_section_new) %></h2>
 
-<% labelled_form_for @section do |f| %>
+<% labelled_form_for @section, :html => {:multipart => true} do |f| %>
 <%= render :partial => 'form', :locals => { :f => f } %>
 <p>
   <%= f.submit l(:button_create) %>
